# task

./: CMakeLists.txt
solutions/: CMakeLists.txt
solutions/task_1/solution/: CMakeLists.txt  main.cpp
solutions/task_2/: CMakeLists.txt
solutions/task_2/solution/: CMakeLists.txt  main.cpp
solutions/task_2/solution/include/: lib.h
solutions/task_3/solution/: CMakeLists.txt  main.cpp
solutions/task_3/solution/include/: game.cpp  game.h  player.cpp  player.h
solutions/task_4/: CMakeLists.txt
solutions/task_4/solution/: CMakeLists.txt  main.cpp
solutions/task_4/solution/include/: lib.h
